src/pages/Root.css
header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: var(--container);
  height: var(--header-height);
  padding-left: 16px;
  padding-right: 16px;
}

nav {
  display: flex;
}

.destination {
  display: flex;
  align-items: center;
  height: 40px;
  padding: 0px 24px;
  border-radius: 20px;
  margin-right: 8px;
  color: black;
  transition: background-color 0.25s;
}

/* Fill on hover */
.destination:hover {
  color: white;
  fill: white;
  background-color: var(--accent);
}

/* Fill with a darker color on press */
.destination:active {
  color: white;
  fill: white;
  background-color: var(--accent-dark);
}

.selected {
  color: white;
  fill: white;
  background-color: var(--accent);
}

footer {
  display: flex;
  align-items: center;
  justify-content: center;
  height: calc(var(--footer-height) - 2px);
  border-top: 2px solid;
  font-weight: bold;
  font-size: 16pt;
}

.logo {
  margin-right: 8px;
}

